Fix height of modals and width of comparison sliders on firefox.

--- a/styles/style.css
+++ b/styles/style.css
@@ -853,6 +853,7 @@ file. These definitions will be defined mobile first.
         display: flex;
         align-items: center;
         width: fit-content;
+        width: -moz-fit-content;
         max-width: 100%;
         margin: auto;
     }
@@ -1055,6 +1056,7 @@ file. These definitions will be defined mobile first.
         margin: auto;
         flex-direction: column;
         height: fit-content;
+        height: -moz-fit-content;
         max-width: 52%;
         max-height: 97%;
         padding: 1em;
